[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Sam <>"]
edition = "2018"
#![allow(dead_code)]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "day2", "day3", "day5",
    "day6", "day7","day8", "day9",
]

[dependencies]
criterion = "0.3"

day2 = { path = "day2" }
day3 = { path = "day3" }
day5 = { path = "day5" }
day6 = { path = "day6" }
day7 = { path = "day7" }
day8 = { path = "day8" }
day9 = { path = "day9" }

[[bench]]
name = "my_bench"
harness = false