[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Sam <>"]
edition = "2018"
#![allow(dead_code)]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "day02", "day03", "day05",
    "day06", "day07","day08", "day09","day10"
]

[dependencies]
criterion = "0.3"

day02 = { path = "day02" }
day03 = { path = "day03" }
day05 = { path = "day05" }
day06 = { path = "day06" }
day07 = { path = "day07" }
day08 = { path = "day08" }
day09 = { path = "day09" }
day10 = { path = "day10" }

[[bench]]
name = "my_bench"
harness = false